2003-08-28  Carl Worth  <cworth at east.isi.edu>

	* src/cairo_traps.c (_line_segs_intersect_ceil): One more
	increment, (that still won't fix the bug). Added comment point to
	Hobby's paper, (that will fix it).

	* src/cairo_font.c (_cairo_font_resolve_xft_font): Fixed to use
	fabs instead of abs when correcting for negative area expansion.

2003-08-28  Keith Packard <keithp@keithp.com
	* src/cairo_font.c: font pixel size is always non-negative

2003-08-26  Carl Worth  <cworth@isi.edu>

	* src/cairoint.h: Added missing underscores to several internal
	functions.
	* src/cairo_font.c: 
	* src/cairo_gstate.c: 
	* src/cairo_matrix.c: 
	* src/cairo_path_fill.c: 
	* src/cairo_path_stroke.c: 
	* src/cairo_pen.c: 
	* src/cairo_traps.c: Fixed to track newly added underscores.

	* src/cairo.h: Some whitespace fixes.

	* src/cairo_gstate.c (_cairo_gstate_set_pattern): Fixed to anchor
	pattern at current point instead of the origin.
	(_cairo_gstate_stroke): Fixed to properly transform pattern.
	(_cairo_gstate_fill): Fixed to properly transform pattern.

2003-07-31  Richard Henderson  <rth@twiddle.net>

	* src/cairo_color.c (CAIRO_COLOR_DEFAULT): Mark const.
	* src/cairo_matrix.c (CAIRO_MATRIX_IDENTITY): Likewise.
	* src/cairo_path.c (num_args): Likewise.
	* src/cairo_path_bounds.c (_cairo_path_bounds): Likewise for cb.

2003-07-31  Richard Henderson  <rth@twiddle.net>

	* cairo.pc.in: Depend on slim.
	* configure.in: Check for slim.

	* src/cairo.h: Include slim_{export,import}.h as needed; mark all
	symbols __external_linkage.
	* src/cairoint.h: Include slim_internal.h; mark all symbols
	__internal_linkage.  Provide slim_hidden_proto symbols as needed.
	* src/cairo.c, src/cairo_matrix.c, src/cairo_surface.c,
	Provide slim_hidden_def symbols as needed.
	* src/cairo_traps.c (cairo_traps_add_trap): Mark static.
	(cairo_traps_add_trap_from_points): Likewise.

2003-07-30  Carl Worth  <cworth@isi.edu>

	* configure.in (LIBIC_REQUIRED): Fixed some typos in the libic
	PKG_CHECK.
